First work on the ExportDialogs .. more to come after the FOSDEM..

--- a/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_de.properties
+++ b/jfreereport/source/org/jfree/report/modules/gui/csv/resources/csv-export-resources_de.properties
@@ -6,13 +6,14 @@ action.export-to-csv.name=Export nach CSV...
 action.export-to-csv.description=Speichert den Bericht im CSV format
 
 csvexportdialog.confirm=OK
-csvexportdialog.csv-file-description=Text-Dateien mit komma getrennten Werten.
+csvexportdialog.csv-file-description=Text-Dateien mit Komma getrennten Werten.
 csvexportdialog.dialogtitle=Bericht als CSV-Datei speichern ...
 csvexportdialog.encoding=Zeichensatz
 csvexportdialog.errorTitle=Fehler
 csvexportdialog.export.data=Exportiere die Datenquelle (Rohdaten)
 csvexportdialog.export.printed_elements=Exportiere die gedruckten Daten (Bearbeitete Daten)
-csvexportdialog.exporttype=Bitte Export-Methode ausw\u00e4hlen
+cvsexportdialog.export.columnnames=Spaltennamen als erste Zeile anf\u00fcgen
+csvexportdialog.exporttype=Export-Methode ausw\u00e4hlen
 csvexportdialog.filename=Dateiname
 csvexportdialog.selectFile=Ausw\u00e4hlen
 csvexportdialog.separator.colon=Komma (,)
